# bwiseth_e

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  config.json  config_example.json  docker-compose copy.yml  docker-compose.yml  dockerfile  generate_env.sh  pyproject.toml
infrastructure/pulumi/: Pulumi.yaml  __main__.py
src/: __init__.py  main.py
src/ingestion/: extract.py  extract_kline.py  kafka_producer.py  models.py
src/utils/: database.py  load_config.py
tests/: conftest.py  test_extract_kline.py  test_extraction.py  test_kafka_producer.py
