[tool.poetry]
name = "bwiseth-extract"
version = "0.1.0"
description = "Extraction of raw data from public APIs and writing to database."
authors = ["Oscar Gil <hello@oscargilbalaguer.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pulumi = "^3.133.0"
pulumi-aws = "^6.52.0"
sqlalchemy = "^2.0.35"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
pre-commit = "^4.0.1"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
fixable = ["F", "I"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
