[tool.poetry]
name = "bwiseth-extract"
version = "0.1.0"
description = "Extraction of raw BTC/ETH data from public APIs and writing to Kafka topic."
authors = ["Oscar Gil <hello@oscargilbalaguer.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
pulumi = "^3.133.0"
pulumi-aws = "^6.52.0"
websockets = "^13.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
pre-commit = "^4.0.1"
pytest = "^8.3.3"

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "F",  # Pyflakes-like linting rules (undefined names, unused imports, etc.)
    "E",  # PEP8 error codes (excluding formatting handled by Black)
    "W",  # PEP8 warnings (like indentation and whitespace issues)
    "B",  # Bug-prone patterns (flake8-bugbear)
    "C",  # Complexity checks (McCabe)
    "I",  # Import order (isort)
    "Q",  # Quotes consistency (flake8-quotes)
    "UP"  # New PEP8 rules that are not yet enabled by default
]

[tool.ruff.format]
docstring-code-format = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
